# ptop

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md
doc/: double message bug.drawio  file transfering.drawio  happy path.drawio  links.txt  renamed class structure.drawio
src/: client.cpp  client.h  clientmain.cpp  commands.cpp  commands.h  crc.cpp  crc.h  error.cpp  error.h  filetransfer.cpp  filetransfer.h  interfaces.h  ip.cpp  ip.h  linux_platform.cpp  linux_platform.h  linux_sock.cpp  linux_socket.cpp  linux_socket.h  linux_wrapper.cpp  loop.h  main.cpp  message.cpp  message.h  name_data.h  negotiation.cpp  negotiation.h  platform.cpp  platform.h  protocol.cpp  protocol.h  ptop_socket.cpp  ptop_socket.h  server.cpp  server.h  servermain.cpp  sock.cpp  sock.h  socket.cpp  socket.h  (+12 more)
